--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^6.1.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^7.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
@@ -21,5 +23,6 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
-  }
-,"author":"PhasitWo"}
+  },
+  "author": "PhasitWo"
+}
