--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^6.0.3",
     "react-router": "^7.12.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.10"
