--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^6.1.4",
     "dayjs": "^1.11.19",
+    "rc-picker": "^4.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^6.0.3",
